Enable InputDeviceEventObserver to receive batched updates.

On Android, we had a single system call forking into three different
InputDeviceEventObserver calls, which resulted in redundant updates in
InputDeviceChangeObserver.  Batching multiple device updates into one avoids the
redundancy.

Bug: 904535
Change-Id: I04a56db23553ae2d1cbe97fffd97d03189665187
Reviewed-on: https://chromium-review.googlesource.com/c/1363636
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616385}
Former-commit-id: 950777f59395500bb893d184fadfecc5883f03df