ui/events/devices/input_device_event_observer.h
@@ -5,6 +5,8 @@
 #ifndef UI_EVENTS_DEVICES_INPUT_DEVICE_EVENT_OBSERVER_H_
 #define UI_EVENTS_DEVICES_INPUT_DEVICE_EVENT_OBSERVER_H_
 
+#include <stdint.h>
+
 #include "ui/events/devices/events_devices_export.h"
 
 namespace ui {
@@ -14,12 +16,27 @@ enum class StylusState;
 // DeviceDataManager observer used to announce input hotplug events.
 class EVENTS_DEVICES_EXPORT InputDeviceEventObserver {
  public:
+  // Bitfields for input device types to update through
+  // |OnInputDeviceConfigurationChanged|.
+  static constexpr uint8_t kKeyboard = 1 << 0;
+  static constexpr uint8_t kMouse = 1 << 1;
+  static constexpr uint8_t kTouchpad = 1 << 2;
+  static constexpr uint8_t kTouchscreen = 1 << 3;
+
   virtual ~InputDeviceEventObserver() {}
 
+  // This method is called for configurations changes in any |IputDeviceType|
+  // specified in the |input_device_type| bit-field.
+  virtual void OnInputDeviceConfigurationChanged(uint8_t input_device_types) {}
+
+  // DEPRECATED: Use |OnInputDeviceConfigurationChanged()| instead.
+  //
+  // TODO(mustaq): Remove the On*DeviceConfigurationChanged() functions below.
   virtual void OnKeyboardDeviceConfigurationChanged() {}
   virtual void OnTouchscreenDeviceConfigurationChanged() {}
   virtual void OnMouseDeviceConfigurationChanged() {}
   virtual void OnTouchpadDeviceConfigurationChanged() {}
+
   virtual void OnDeviceListsComplete() {}
   virtual void OnStylusStateChanged(StylusState state) {}
 
